js/js.translator/testData/incremental/invalidation/companionWithStdLibCall/lib1/l1.0.kt
class MyClass1 {
    companion object {
        fun companionMethod(v: Int): Int {
            return v.countTrailingZeroBits()
        }
    }
}

class MyClass2 {
    companion object {
        fun companionMethod(v: Int): Int {
            return v.countTrailingZeroBits()
        }
    }
}
